# soco-spotify-plugin

./: LICENSE  README.md  requirements.txt  setup.cfg
soco_spotify_plugin/: __init__.py  soco_spotify.py
