[metadata]
name = soco_spotify_plugin
version = attr: soco_spotify_plugin.__version__
description = SoCo Spotify plugin is design to add tracks, albums or playlists into Sonos queue.
long_description = file: README.md
keywords = Sonos, Spotify
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
  soco
  spotipy
